Change z-index to fix form display

--- a/src/css/Predictor.css
+++ b/src/css/Predictor.css
@@ -1,3 +1,15 @@
 .predictor{
-  visibility: visible
+  display: grid;
+  padding-top: 50px;
+  position: relative;
+  
+}
+form{
+  position: relative;
+  z-index: 100;
+}
+
+form > input {
+  position: relative;
+  z-index: 400;
 }
